flux/apps/base/pvr/prowlarr/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr-health
  namespace: pvr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEntities:
        - host
        - health
    - toPorts:
        - ports:
            - port: "9696"
              protocol: "TCP"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr-vxlan
  namespace: pvr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: pod-gateway
    - toPorts:
        - ports:
            - port: "8472"
              protocol: "UDP"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr-cilium-ingress
  namespace: pvr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEntities:
        - host
        - ingress
